--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "alpinejs": "^3.10.2",
         "aos": "^3.0.0-beta.6",
         "hamburgers": "^1.2.1",
+        "intl-tel-input": "^17.0.18",
         "jquery": "^3.6.0",
         "sweetalert2": "^11.4.20"
     }
