--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,37 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=c27c93f9825953bad2189044f5466448",
-    "/js/vendor.js": "/js/vendor.js?id=bb16b0c3504fddf385740e3338d23396",
-    "/js/aos.js": "/js/aos.js?id=cefb36bae3ee07dd843374fe53e86430",
-    "/js/jquery.min.js": "/js/jquery.min.js?id=aefcd89bfe520e6e4961b23bb5c44fb0",
-    "/js/sweetalert2.min.js": "/js/sweetalert2.min.js?id=ac5ff3eb8e0df4db72fe89d1cd9cbeda",
-    "/js/collapse.js": "/js/collapse.js?id=8a0f3b821da774a56bb0d5e55bd598a3",
-    "/js/ripple.js": "/js/ripple.js?id=fe4e1f05a3d158d37bb570bd4120f375",
-    "/js/utils.js": "/js/utils.js?id=635bd20ba7f1a40f5e66b175fe74f15a",
-    "/css/app.css": "/css/app.css?id=9880fb29baa393400e5b7e0a90bc6c2b",
-    "/css/intlTelInput.min.css": "/css/intlTelInput.min.css?id=275fe3800971431e61856e1e7e16d845",
-    "/css/hamburgers.min.css": "/css/hamburgers.min.css?id=c7a1bf2dbf4a785fb8ee1f91b5dd88c1",
-    "/css/sweetalert2.min.css": "/css/sweetalert2.min.css?id=a2fa19b3967300e3f7c72502f66f90ff",
-    "/css/aos.css": "/css/aos.css?id=62aaf7e575b14c8f11c29d3f36db2343",
-    "/images/author-bg-dark.png": "/images/author-bg-dark.png?id=3ed418aaa43c391c50cb1c1a565bb5a0",
-    "/images/author-bg.png": "/images/author-bg.png?id=ff298b4178649ed69bd6695aee76d3cd",
-    "/images/book-bg-dark.png": "/images/book-bg-dark.png?id=7e5cb2ce397f64df02c828102102d201",
-    "/images/book-bg.png": "/images/book-bg.png?id=31c96554c11486005a9ad95d96c2f0f4",
-    "/images/book-title.png": "/images/book-title.png?id=4e2439f2fffa2f1f6d1b1361b86568a5",
-    "/images/book.png": "/images/book.png?id=107d6061e8518011b3c53eba49ebc7f3",
-    "/images/favicon.png": "/images/favicon.png?id=26d5d71f7ec1af17a492ca8b5e6e0640",
-    "/images/floatObj-left.png": "/images/floatObj-left.png?id=15863563ab298e0ea0262cb9ac1cb065",
-    "/images/floatObj-right.png": "/images/floatObj-right.png?id=312c4c854c781dee492b0e0fe9d26153",
-    "/images/logo.png": "/images/logo.png?id=492b53c254b5183db78a197fc68fb4cd",
-    "/images/mp4.mp4": "/images/mp4.mp4?id=cd04fb64120a3b69b0205dc0741c7e01",
-    "/images/navIcon/author-icon.png": "/images/navIcon/author-icon.png?id=17f977119df3e2790fbaa64e73464ca8",
-    "/images/navIcon/book-icon.png": "/images/navIcon/book-icon.png?id=62fdbb3bc93d5b6ab6272a3fa57df174",
-    "/images/navIcon/contact-icon.png": "/images/navIcon/contact-icon.png?id=a1dc0ac75853a64888c63c3febf5a2ba",
-    "/images/navIcon/home-icon.png": "/images/navIcon/home-icon.png?id=328da82539d91976a10db7354573def6",
-    "/images/navIcon/order-icon.png": "/images/navIcon/order-icon.png?id=b37455f37e0b56e1acb0f53101753575",
-    "/images/pageturner-logo-color.png": "/images/pageturner-logo-color.png?id=b5cf64e83e0428ec9c57430e07e1b6e6",
-    "/images/pageturner-logo-dark.png": "/images/pageturner-logo-dark.png?id=8d41c81dcc67340e2d915588a90a1f47",
-    "/images/pageturner-logo-white.png": "/images/pageturner-logo-white.png?id=1ce0a3eeb0998787153f58bc0eeff5c9",
-    "/images/pageturner.png": "/images/pageturner.png?id=e277aa11e4af92e8ee3a29abdc9172af",
-    "/images/vendor/intl-tel-input/build/flags.png": "/images/vendor/intl-tel-input/build/flags.png?id=4c756015aa7f7e988cca0141faa085b1",
-    "/images/vendor/intl-tel-input/build/flags@2x.png": "/images/vendor/intl-tel-input/build/flags@2x.png?id=836571eca1cbd52d4cb5c56662a2abde"
+    "/js/app.js": "/js/app.js?id=b33c7c6a70715b4c2205dfc4eeaef73c",
+    "/js/vendor.js": "/js/vendor.js?id=fabcbc40b50f2eb517e61b6a16977e8f",
+    "/css/app.css": "/css/app.css?id=134dc9b248d75209bcbe6cedaa00ba99"
 }
