--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,38 @@
 {
-    "/js/app.js": "/js/app.js?id=b33c7c6a70715b4c2205dfc4eeaef73c",
-    "/js/vendor.js": "/js/vendor.js?id=c6e902285203229ff2e90ede714bd145",
-    "/css/app.css": "/css/app.css?id=4c74bb39355f2749befc9ba8aa25c25f"
+    "/js/app.js": "/js/app.js?id=42d3a599a353753702817bdab6a8a168",
+    "/js/vendor.js": "/js/vendor.js?id=ac074eb0c78e0c183153267db732b0ac",
+    "/js/aos.js": "/js/aos.js?id=53a5e849e9e562e244d47ce692bd4983",
+    "/js/jquery.min.js": "/js/jquery.min.js?id=7d25ac24225bef81797095f06206f309",
+    "/js/sweetalert2.min.js": "/js/sweetalert2.min.js?id=1891f3488879bf21c09cd2449be5b374",
+    "/js/collapse.js": "/js/collapse.js?id=9f80bac13a1eddd8e3d8972154023cf5",
+    "/js/ripple.js": "/js/ripple.js?id=7afccb3d0c932449ce318bce58bf1880",
+    "/js/utils.js": "/js/utils.js?id=8e4eef38917090c5e3af8302c30976c8",
+    "/css/app.css": "/css/app.css?id=2d368d4414dd33e701754921a05c0ed6",
+    "/css/intlTelInput.min.css": "/css/intlTelInput.min.css?id=610237fcef3c72273c691b5a3e33f953",
+    "/css/hamburgers.min.css": "/css/hamburgers.min.css?id=77bb325e66d36d5247d40fabf7558550",
+    "/css/sweetalert2.min.css": "/css/sweetalert2.min.css?id=874055f6f399d10cba2278d009d18ec8",
+    "/css/aos.css": "/css/aos.css?id=08f5a29b9193932ea564f3b49c0de9b7",
+    "/images/author-bg-dark.png": "/images/author-bg-dark.png?id=3ed418aaa43c391c50cb1c1a565bb5a0",
+    "/images/author-bg.png": "/images/author-bg.png?id=ff298b4178649ed69bd6695aee76d3cd",
+    "/images/book-bg-dark.png": "/images/book-bg-dark.png?id=7e5cb2ce397f64df02c828102102d201",
+    "/images/book-bg.png": "/images/book-bg.png?id=31c96554c11486005a9ad95d96c2f0f4",
+    "/images/book-title.png": "/images/book-title.png?id=4e2439f2fffa2f1f6d1b1361b86568a5",
+    "/images/book.png": "/images/book.png?id=107d6061e8518011b3c53eba49ebc7f3",
+    "/images/favicon.png": "/images/favicon.png?id=26d5d71f7ec1af17a492ca8b5e6e0640",
+    "/images/floatObj-left.png": "/images/floatObj-left.png?id=15863563ab298e0ea0262cb9ac1cb065",
+    "/images/floatObj-right.png": "/images/floatObj-right.png?id=312c4c854c781dee492b0e0fe9d26153",
+    "/images/logo.png": "/images/logo.png?id=492b53c254b5183db78a197fc68fb4cd",
+    "/images/mail-send.gif": "/images/mail-send.gif?id=fc3ec14b2bd7f18ae637713a248c9bbb",
+    "/images/mp4.mp4": "/images/mp4.mp4?id=cd04fb64120a3b69b0205dc0741c7e01",
+    "/images/navIcon/author-icon.png": "/images/navIcon/author-icon.png?id=17f977119df3e2790fbaa64e73464ca8",
+    "/images/navIcon/book-icon.png": "/images/navIcon/book-icon.png?id=62fdbb3bc93d5b6ab6272a3fa57df174",
+    "/images/navIcon/contact-icon.png": "/images/navIcon/contact-icon.png?id=a1dc0ac75853a64888c63c3febf5a2ba",
+    "/images/navIcon/home-icon.png": "/images/navIcon/home-icon.png?id=328da82539d91976a10db7354573def6",
+    "/images/navIcon/order-icon.png": "/images/navIcon/order-icon.png?id=b37455f37e0b56e1acb0f53101753575",
+    "/images/pageturner-logo-color.png": "/images/pageturner-logo-color.png?id=b5cf64e83e0428ec9c57430e07e1b6e6",
+    "/images/pageturner-logo-dark.png": "/images/pageturner-logo-dark.png?id=8d41c81dcc67340e2d915588a90a1f47",
+    "/images/pageturner-logo-white.png": "/images/pageturner-logo-white.png?id=1ce0a3eeb0998787153f58bc0eeff5c9",
+    "/images/pageturner.png": "/images/pageturner.png?id=e277aa11e4af92e8ee3a29abdc9172af",
+    "/images/vendor/intl-tel-input/build/flags.png": "/images/vendor/intl-tel-input/build/flags.png?id=4c756015aa7f7e988cca0141faa085b1",
+    "/images/vendor/intl-tel-input/build/flags@2x.png": "/images/vendor/intl-tel-input/build/flags@2x.png?id=836571eca1cbd52d4cb5c56662a2abde"
 }
