--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,17 +1,17 @@
 {
-    "/js/app.js": "/js/app.js?id=42d3a599a353753702817bdab6a8a168",
-    "/js/vendor.js": "/js/vendor.js?id=ac074eb0c78e0c183153267db732b0ac",
-    "/js/aos.js": "/js/aos.js?id=53a5e849e9e562e244d47ce692bd4983",
-    "/js/jquery.min.js": "/js/jquery.min.js?id=7d25ac24225bef81797095f06206f309",
-    "/js/sweetalert2.min.js": "/js/sweetalert2.min.js?id=1891f3488879bf21c09cd2449be5b374",
-    "/js/collapse.js": "/js/collapse.js?id=9f80bac13a1eddd8e3d8972154023cf5",
-    "/js/ripple.js": "/js/ripple.js?id=7afccb3d0c932449ce318bce58bf1880",
-    "/js/utils.js": "/js/utils.js?id=8e4eef38917090c5e3af8302c30976c8",
-    "/css/app.css": "/css/app.css?id=2d368d4414dd33e701754921a05c0ed6",
-    "/css/intlTelInput.min.css": "/css/intlTelInput.min.css?id=610237fcef3c72273c691b5a3e33f953",
-    "/css/hamburgers.min.css": "/css/hamburgers.min.css?id=77bb325e66d36d5247d40fabf7558550",
-    "/css/sweetalert2.min.css": "/css/sweetalert2.min.css?id=874055f6f399d10cba2278d009d18ec8",
-    "/css/aos.css": "/css/aos.css?id=08f5a29b9193932ea564f3b49c0de9b7",
+    "/js/app.js": "/js/app.js",
+    "/js/vendor.js": "/js/vendor.js",
+    "/js/aos.js": "/js/aos.js",
+    "/js/jquery.min.js": "/js/jquery.min.js",
+    "/js/sweetalert2.min.js": "/js/sweetalert2.min.js",
+    "/js/collapse.js": "/js/collapse.js",
+    "/js/ripple.js": "/js/ripple.js",
+    "/js/utils.js": "/js/utils.js",
+    "/css/app.css": "/css/app.css",
+    "/css/intlTelInput.min.css": "/css/intlTelInput.min.css",
+    "/css/hamburgers.min.css": "/css/hamburgers.min.css",
+    "/css/sweetalert2.min.css": "/css/sweetalert2.min.css",
+    "/css/aos.css": "/css/aos.css",
     "/images/author-bg-dark.png": "/images/author-bg-dark.png?id=3ed418aaa43c391c50cb1c1a565bb5a0",
     "/images/author-bg.png": "/images/author-bg.png?id=ff298b4178649ed69bd6695aee76d3cd",
     "/images/book-bg-dark.png": "/images/book-bg-dark.png?id=7e5cb2ce397f64df02c828102102d201",
